--- a/manifest.imjoy.json
+++ b/manifest.imjoy.json
@@ -5,6 +5,77 @@
  "version": "0.2.0",
  "plugins": [
   {
+   "name": "HPA-Classification",
+   "type": "window",
+   "tags": [],
+   "ui": [
+    {
+     "model": {
+      "id": "model",
+      "type": "choose",
+      "options": [
+       "ShuffleNet-V2"
+      ],
+      "placeholder": "ShuffleNet-V2"
+     }
+    }
+   ],
+   "version": "0.1.14",
+   "api_version": "0.1.2",
+   "url": "",
+   "description": "ShuffleNetV2 for HPA.",
+   "icon": "extension",
+   "inputs": null,
+   "outputs": null,
+   "env": null,
+   "requirements": [
+    "https://cdn.jsdelivr.net/npm/apexcharts",
+    "https://cdn.jsdelivr.net/npm/@tensorflow/tfjs",
+    "https://cdn.jsdelivr.net/npm/simpleheat@0.4.0/simpleheat.min.js",
+    "https://cdn.jsdelivr.net/gh/photopea/UTIF.js@4f1b10cb09e244cfd4f9631245d2231537148be7/UTIF.js"
+   ],
+   "dependencies": [],
+   "defaults": {
+    "w": 60,
+    "h": 20
+   },
+   "uri": "imjoy-plugins/HPA-Classification.imjoy.html"
+  },
+  {
+   "name": "Noise2Self",
+   "type": "native-python",
+   "version": "0.1.8",
+   "tags": [
+    "CPU",
+    "GPU"
+   ],
+   "api_version": "0.1.2",
+   "description": "A demo plugin for Noise2Self (Blind Denoising by Self-Supervision)",
+   "ui": "training steps:{id:'steps', type:'number', min:1, placeholder:1000}",
+   "inputs": null,
+   "outputs": null,
+   "flags": [],
+   "icon": "extension",
+   "env": {
+    "CPU": "conda create -n noise2self-cpu python=3.6.2",
+    "GPU": "conda create -n noise2self-gpu python=3.6.2"
+   },
+   "requirements": {
+    "CPU": [
+     "repo:https://github.com/czbiohub/noise2self.git",
+     "conda: -c pytorch six pillow numpy scipy pytorch=1.0 torchvision"
+    ],
+    "GPU": [
+     "repo:https://github.com/czbiohub/noise2self.git",
+     "conda: -c pytorch six pillow numpy scipy cudatoolkit=9.0 pytorch=1.0 torchvision"
+    ]
+   },
+   "dependencies": [
+    "oeway/ImJoy-Plugins:Im2Im-Dashboard"
+   ],
+   "uri": "imjoy-plugins/Noise2Self.imjoy.html"
+  },
+  {
    "name": "Skin-Lesion-Analyzer",
    "type": "window",
    "tags": [],
