--- a/manifest.imjoy.json
+++ b/manifest.imjoy.json
@@ -5,6 +5,28 @@
  "version": "0.2.0",
  "plugins": [
   {
+   "name": "DeepBindScan",
+   "type": "native-python",
+   "version": "0.2.7",
+   "api_version": "0.1.6",
+   "description": "Predict binding affinity of TF/RBP to a given sequence.",
+   "tags": [],
+   "ui": "Predict binding affinity of TF/RBP to a given sequence.",
+   "inputs": null,
+   "outputs": null,
+   "flags": [],
+   "icon": "extension",
+   "env": "conda create -n kipoi-tf python=3.6",
+   "requirements": [
+    "conda: h5py tensorflow>=1.4 keras>=2.0.6 bioconda::pybedtools bioconda::pyfaidx numpy pandas",
+    "pip: kipoi kipoiseq"
+   ],
+   "dependencies": [
+    "imjoy-team/example-plugins:SchemaIO"
+   ],
+   "uri": "imjoy-plugins/DeepBindScan.imjoy.html"
+  },
+  {
    "name": "HPA-Classification",
    "type": "window",
    "tags": [],
@@ -74,6 +96,34 @@
     "oeway/ImJoy-Plugins:Im2Im-Dashboard"
    ],
    "uri": "imjoy-plugins/Noise2Self.imjoy.html"
+  },
+  {
+   "name": "SchemaIO",
+   "type": "window",
+   "tags": [],
+   "ui": "",
+   "version": "0.2.4",
+   "api_version": "0.1.3",
+   "description": "[TODO: describe this plugin with one sentence.]",
+   "icon": "extension",
+   "inputs": null,
+   "outputs": null,
+   "env": "",
+   "requirements": [
+    "https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.22/vue.min.js",
+    "https://unpkg.com/vue-form-generator@2.3.4/dist/vfg.js",
+    "https://unpkg.com/vue-form-generator@2.3.4/dist/vfg.css",
+    "https://cdn.jsdelivr.net/npm/vega@5.3.4/build/vega.js",
+    "https://cdn.jsdelivr.net/npm/vega-lite@3.1.0",
+    "https://cdn.jsdelivr.net/npm/vega-embed@4.0.0"
+   ],
+   "dependencies": [],
+   "defaults": {
+    "w": 20,
+    "h": 10
+   },
+   "runnable": false,
+   "uri": "imjoy-plugins/SchemaIO.imjoy.html"
   },
   {
    "name": "Skin-Lesion-Analyzer",
