--- a/manifest.imjoy.json
+++ b/manifest.imjoy.json
@@ -7,8 +7,8 @@
   {
    "name": "DeepBindScan",
    "type": "native-python",
-   "version": "0.2.7",
-   "api_version": "0.1.6",
+   "version": "0.2.9",
+   "api_version": "0.1.3",
    "description": "Predict binding affinity of TF/RBP to a given sequence.",
    "tags": [],
    "ui": "Predict binding affinity of TF/RBP to a given sequence.",
@@ -64,6 +64,32 @@
    "uri": "imjoy-plugins/HPA-Classification.imjoy.html"
   },
   {
+   "name": "HPA-UMAP",
+   "type": "window",
+   "tags": [],
+   "ui": "Explore protein localization patterns in HPA images.",
+   "version": "0.2.8",
+   "api_version": "0.1.2",
+   "description": "Explore protein localization patterns in HPA images.",
+   "icon": "photo",
+   "inputs": null,
+   "outputs": null,
+   "requirements": [
+    "https://cdn.plot.ly/plotly-latest.min.js",
+    "https://unpkg.com/papaparse@latest/papaparse.min.js",
+    "https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js",
+    "https://unpkg.com/spectre.css/dist/spectre.min.css",
+    "https://unpkg.com/spectre.css/dist/spectre-exp.min.css",
+    "https://unpkg.com/spectre.css/dist/spectre-icons.min.css"
+   ],
+   "dependencies": [],
+   "defaults": {
+    "w": 50,
+    "h": 20
+   },
+   "uri": "imjoy-plugins/HPA-UMAP.imjoy.html"
+  },
+  {
    "name": "Noise2Self",
    "type": "native-python",
    "version": "0.1.8",
@@ -102,7 +128,7 @@
    "type": "window",
    "tags": [],
    "ui": "",
-   "version": "0.2.4",
+   "version": "0.2.5",
    "api_version": "0.1.3",
    "description": "[TODO: describe this plugin with one sentence.]",
    "icon": "extension",
