--- a/manifest.imjoy.json
+++ b/manifest.imjoy.json
@@ -5,6 +5,24 @@
  "version": "0.2.0",
  "plugins": [
   {
+   "name": "3D visualization",
+   "type": "window",
+   "tags": [],
+   "ui": "Illustrate 3D visualization with vtk in the browser",
+   "version": "0.1.0",
+   "api_version": "0.1.2",
+   "description": "Demonstration of 3D visualization wiht vtk.",
+   "icon": "extension",
+   "inputs": null,
+   "outputs": null,
+   "dependencies": [],
+   "defaults": {
+    "w": 30,
+    "h": 20
+   },
+   "uri": "imjoy-plugins/3D-visualization.imjoy.html"
+  },
+  {
    "name": "DeepBindScan",
    "type": "native-python",
    "version": "0.2.9",
