--- a/manifest.imjoy.json
+++ b/manifest.imjoy.json
@@ -25,7 +25,7 @@
   {
    "name": "DeepBindScan",
    "type": "native-python",
-   "version": "0.2.11",
+   "version": "0.2.14",
    "api_version": "0.1.3",
    "description": "Predict binding affinity of TF/RBP to a given DNA/RNA sequence.",
    "tags": [],
@@ -34,14 +34,15 @@
    "outputs": null,
    "flags": [],
    "icon": "extension",
-   "env": "conda create -n kipoi-tf python=3.6",
+   "env": "conda create -n deepbindscan python=3.6.8",
    "requirements": [
-    "conda: h5py tensorflow>=1.4 keras>=2.0.6 bioconda::pybedtools bioconda::pyfaidx numpy pandas",
-    "pip: kipoi kipoiseq"
+    "conda: h5py bioconda::pybedtools bioconda::pyfaidx numpy pandas",
+    "pip: -U tensorflow==1.8.0 keras==2.1.6 kipoi kipoiseq"
    ],
    "dependencies": [
     "imjoy-team/example-plugins:SchemaIO"
    ],
+   "cmd": "KERAS_BACKEND=tensorflow python",
    "uri": "imjoy-plugins/DeepBindScan.imjoy.html"
   },
   {
@@ -60,7 +61,7 @@
      }
     }
    ],
-   "version": "0.1.18",
+   "version": "0.1.21",
    "api_version": "0.1.2",
    "url": "",
    "description": "ShuffleNetV2 for HPA.",
@@ -75,7 +76,7 @@
     "https://cdn.jsdelivr.net/gh/photopea/UTIF.js@4f1b10cb09e244cfd4f9631245d2231537148be7/UTIF.js"
    ],
    "dependencies": [
-    "https://gist.githubusercontent.com/oeway/002d18ea10062856d6691d8fa5ad35c9/raw/HPA-Image-Selection.imjoy.html"
+    "https://raw.githubusercontent.com/imjoy-team/example-plugins/master/imjoy-plugins/HPA-Image-Selection.imjoy.html"
    ],
    "defaults": {
     "w": 60,
@@ -84,6 +85,29 @@
    },
    "cover": "https://dl.dropbox.com/s/87w11rqi5qq1ftb/hpa-classification-v0.1.17.gif",
    "uri": "imjoy-plugins/HPA-Classification.imjoy.html"
+  },
+  {
+   "name": "HPA-Image-Selection",
+   "type": "window",
+   "tags": [],
+   "ui": "",
+   "version": "0.1.3",
+   "api_version": "0.1.2",
+   "description": "This is a backbone plugin for using Vue.js in ImJoy",
+   "icon": "extension",
+   "inputs": null,
+   "outputs": null,
+   "env": "",
+   "requirements": [
+    "https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.22/vue.min.js"
+   ],
+   "dependencies": [],
+   "defaults": {
+    "w": 50,
+    "h": 30
+   },
+   "runnable": true,
+   "uri": "imjoy-plugins/HPA-Image-Selection.imjoy.html"
   },
   {
    "name": "HPA-UMAP",
@@ -180,7 +204,7 @@
    "type": "window",
    "tags": [],
    "ui": "A pretrained MobileNet image classifier for images of skin lesion built with Tensorflow.js",
-   "version": "0.1.0",
+   "version": "0.1.1",
    "api_version": "0.1.2",
    "description": "A pretrained MobileNet image classifier built with Tensorflow.js",
    "icon": "extension",
@@ -199,6 +223,34 @@
     "h": 20
    },
    "uri": "imjoy-plugins/Skin-Lesion-Analyzer.imjoy.html"
+  },
+  {
+   "name": "maui-demo",
+   "type": "native-python",
+   "version": "0.1.0",
+   "description": "A domo plugin for Multi-omics Autoencoder Integration: Deep learning-based heterogenous data analysis toolkit",
+   "tags": [],
+   "ui": "",
+   "cover": "https://dl.dropbox.com/s/kaugiuiqc6jcjkb/manui-training.png",
+   "inputs": null,
+   "outputs": null,
+   "flags": [],
+   "icon": "extension",
+   "api_version": "0.1.6",
+   "env": "conda create -n maui python=3.6",
+   "permissions": [],
+   "requirements": [
+    "maui-tools",
+    "scikit-learn",
+    "pandas",
+    "matplotlib",
+    "seaborn==0.9.0",
+    "lifelines==0.14.6"
+   ],
+   "dependencies": [
+    "oeway/ImJoy-Plugins:Im2Im-Dashboard"
+   ],
+   "uri": "imjoy-plugins/maui-demo.imjoy.html"
   }
  ],
  "collections": []
