--- a/manifest.imjoy.json
+++ b/manifest.imjoy.json
@@ -23,6 +23,49 @@
    "uri": "imjoy-plugins/3D-visualization.imjoy.html"
   },
   {
+   "name": "CARE",
+   "type": "native-python",
+   "version": "0.1.15",
+   "api_version": "0.1.2",
+   "description": "This plugin demonstrates denoising using CARE.",
+   "tags": [
+    "CPU",
+    "GPU",
+    "macOS CPU"
+   ],
+   "ui": "",
+   "inputs": null,
+   "outputs": null,
+   "flags": [],
+   "icon": null,
+   "env": {
+    "CPU": "conda create -n care-cpu python=3.6.7",
+    "GPU": "conda create -n care-gpu python=3.6.7",
+    "macOS CPU": "conda create -n care-mac-cpu python=3.6.7"
+   },
+   "requirements": {
+    "CPU": [
+     "pip: tensorflow==1.8.0 Pillow csbdeep tifffile six"
+    ],
+    "GPU": [
+     "pip: tensorflow-gpu==1.8.0 Pillow csbdeep tifffile six gputil"
+    ],
+    "macOS CPU": [
+     "pip: tensorflow==1.5.0 Pillow csbdeep tifffile six"
+    ]
+   },
+   "dependencies": [
+    "oeway/ImJoy-Plugins:Im2Im-Dashboard",
+    "oeway/ImJoy-Plugins:launchpad",
+    "oeway/ImJoy-Plugins:Tabbed-Docs"
+   ],
+   "cover": [
+    "https://dl.dropbox.com/s/bo8timmql033xy1/CARE-0.1.8.gif",
+    "https://dl.dropbox.com/s/rq5ikbben3xbxge/CARE-0.1.8-2.gif"
+   ],
+   "uri": "imjoy-plugins/CARE.imjoy.html"
+  },
+  {
    "name": "DPNUnet",
    "type": "native-python",
    "version": "0.2.9",
