--- a/manifest.imjoy.json
+++ b/manifest.imjoy.json
@@ -153,7 +153,7 @@
      }
     }
    ],
-   "version": "0.1.21",
+   "version": "0.1.22",
    "api_version": "0.1.2",
    "url": "",
    "description": "ShuffleNetV2 for HPA.",
@@ -183,7 +183,7 @@
    "type": "window",
    "tags": [],
    "ui": "",
-   "version": "0.1.3",
+   "version": "0.1.4",
    "api_version": "0.1.2",
    "description": "This is a backbone plugin for using Vue.js in ImJoy",
    "icon": "extension",
@@ -206,7 +206,7 @@
    "type": "window",
    "tags": [],
    "ui": "Explore protein localization patterns in HPA images.",
-   "version": "0.3.6",
+   "version": "0.3.7",
    "api_version": "0.1.2",
    "description": "Explore protein localization patterns in HPA images.",
    "icon": "photo",
@@ -234,7 +234,7 @@
    "type": "window",
    "tags": [],
    "ui": "",
-   "version": "0.5.73",
+   "version": "0.5.74",
    "api_version": "0.1.5",
    "description": "An image annotator made with OpenLayers",
    "icon": "extension",
@@ -255,8 +255,8 @@
     "https://cdnjs.cloudflare.com/ajax/libs/jszip/3.2.0/jszip.min.js",
     "https://use.fontawesome.com/releases/v5.8.2/css/all.css",
     "cache:https://use.fontawesome.com/releases/v5.8.2/webfonts/fa-solid-900.woff2",
-    "cache:https://www.proteinatlas.org/images/19661/221_G2_1_blue_red_green.jpg",
-    "cache:https://www.proteinatlas.org/images/19663/395_C4_2_blue_red_green.jpg"
+    "cache:https://images.proteinatlas.org/19661/221_G2_1_blue_red_green.jpg",
+    "cache:https://images.proteinatlas.org/19663/395_C4_2_blue_red_green.jpg"
    ],
    "dependencies": [
     "oeway/ImJoy-Plugins:ImageSelection",
