--- a/manifest.imjoy.json
+++ b/manifest.imjoy.json
@@ -25,13 +25,15 @@
   {
    "name": "CARE",
    "type": "native-python",
-   "version": "0.1.18",
+   "version": "0.1.19",
    "api_version": "0.1.2",
    "description": "This plugin demonstrates denoising using CARE.",
    "tags": [
-    "CPU",
-    "GPU",
-    "macOS CPU"
+    "Linux CPU",
+    "Linux GPU",
+    "Windows CPU",
+    "Windows GPU",
+    "MacOS CPU"
    ],
    "ui": "",
    "inputs": null,
@@ -44,13 +46,19 @@
     "macOS CPU": "conda create -n care-mac-cpu python=3.6.7"
    },
    "requirements": {
-    "CPU": [
+    "Linux CPU": [
      "pip: tensorflow==1.8.0 keras==2.1.5 Pillow csbdeep==0.4.1 tifffile six"
     ],
-    "GPU": [
+    "Linux GPU": [
      "pip: tensorflow-gpu==1.8.0 keras==2.1.5 Pillow csbdeep==0.4.1 tifffile six gputil"
     ],
-    "macOS CPU": [
+    "Windows CPU": [
+     "pip: tensorflow==1.15.0 keras==2.1.5 Pillow csbdeep==0.4.1 tifffile six"
+    ],
+    "Windows GPU": [
+     "pip: tensorflow-gpu==1.15.0 keras==2.1.5 Pillow csbdeep==0.4.1 tifffile six gputil"
+    ],
+    "MacOS CPU": [
      "pip: tensorflow==1.5.0 keras==2.1.5 Pillow csbdeep==0.4.1 tifffile six"
     ]
    },
@@ -60,7 +68,7 @@
     "oeway/ImJoy-Plugins:Tabbed-Docs"
    ],
    "cover": [
-    "https://imjoy-team.github.io/example-plugins/care/care-cover.gif"
+    "https://oeway.github.io/ImJoy-Plugins/care/care-cover.gif"
    ],
    "uri": "imjoy-plugins/CARE.imjoy.html"
   },
@@ -233,7 +241,7 @@
    "type": "window",
    "tags": [],
    "ui": "",
-   "version": "0.5.75",
+   "version": "0.5.76",
    "api_version": "0.1.5",
    "description": "An image annotator made with OpenLayers",
    "icon": "extension",
@@ -266,7 +274,7 @@
     "h": 25,
     "fullscreen": true
    },
-   "cover": "https://imjoy-team.github.io/example-plugins/image-annotator/annotator-cover.gif",
+   "cover": "https://oeway.github.io/ImJoy-Plugins/image-annotator/annotator-cover.gif",
    "uri": "imjoy-plugins/ImageAnnotator.imjoy.html"
   },
   {
